--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-blank",
+  "name": "simple-vue-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "bootstrap-vue": "^2.19.0",
+    "firebase": "^8.1.1",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.9",
+    "vue-yandex-maps": "^0.10.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
